# goldbeck-optimizer

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  CODE_AUDIT.md  CODE_AUDIT_QUICK_REFERENCE.txt  CONTRIBUTING.md  CRITICAL_FIXES.md  DEPLOY.md  IMPLEMENTATION_PLAN.md  SYSTEM_DESIGN.md  package.json  pnpm-lock.yaml
backend/: .env.example  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/v1/: cadastral.py  export.py  financial.py  floorplan.py  floorplan_overrides.py  optimize.py  parcels.py  plot.py  projects.py  regulations.py  rhino.py  router.py  shadow.py
backend/app/database/: __init__.py  engine.py  models.py
backend/app/models/: building.py  financial.py  floorplan.py  optimization.py  plot.py  regulation.py  shadow.py
backend/app/services/: ai_regulation_lookup.py  cadastral.py  financial_calculator.py  geocoding.py  geometry_engine.py  german_regulations.py  ifc_exporter.py  parcel_store.py  project_store.py  regulation_engine.py  shadow_calculator.py  ws_sync.py
backend/app/services/floorplan/: architectural_rules.py  base.py  goldbeck_constants.py  goldbeck_generator.py  optimizer.py  registry.py  (+2 more)
backend/app/utils/: job_store.py  rate_limiter.py
backend/data/: goldbeck.db
backend/scripts/: backup_db.py  diagnose_optimizer.py  run_validation.py
backend/tests/: conftest.py  test_api_endpoints.py  test_financial_calculator.py  test_generator.py  test_job_store.py  test_rate_limiter.py  test_validation.py
(+97 files in other folders)
