[project]
name = "land-layout-optimizer-backend"
version = "1.0.0"
description = "Land analysis & building layout optimization API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "shapely>=2.0",
    "pyproj>=3.0",
    "pysolar>=0.11",
    "numpy>=1.24",
    "httpx>=0.28.0",
    "anthropic>=0.43.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
